Application d'une analyse en composantes principales pour la réduction de dimensions du projet, on est alors passé de 11 dimensions à 6 en gardant environ 81% de l'inertie globale

--- a/wine-notebook.ipynb
+++ b/wine-notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "# Pré-traitement des données\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "# Pour tester les performances des modèles utilisés\n",
     "from sklearn import metrics\n",
@@ -987,7 +988,404 @@
     "#### c) Features selection\n",
     "Le but de cette partie est de parvenir à diminuer de la dimensionalité de notre problème en ne gardant que les variables les moins corrélées et par conséquent qui représentent au mieux notre problème, on va l'utiliser pour deux raisons : \n",
     "1) Pour une visualisation plus efficaces de nos données en réduisant la dimensionnalité à 2 ou 3 variables\n",
-    "2) Pour ensuite comparer son utilisation ou pas sur l'application de modèles de classification"
+    "2) Pour ensuite comparer son utilisation ou pas sur l'application de modèles de classification\n",
+    "##### Normalisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.172097</td>\n",
+       "      <td>-0.081770</td>\n",
+       "      <td>0.213280</td>\n",
+       "      <td>2.821349</td>\n",
+       "      <td>-0.035355</td>\n",
+       "      <td>0.569932</td>\n",
+       "      <td>0.744565</td>\n",
+       "      <td>2.331512</td>\n",
+       "      <td>-1.246921</td>\n",
+       "      <td>-0.349184</td>\n",
+       "      <td>-1.393152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.657501</td>\n",
+       "      <td>0.215896</td>\n",
+       "      <td>0.048001</td>\n",
+       "      <td>-0.944765</td>\n",
+       "      <td>0.147747</td>\n",
+       "      <td>-1.253019</td>\n",
+       "      <td>-0.149685</td>\n",
+       "      <td>-0.009154</td>\n",
+       "      <td>0.740029</td>\n",
+       "      <td>0.001342</td>\n",
+       "      <td>-0.824276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.475751</td>\n",
+       "      <td>0.017452</td>\n",
+       "      <td>0.543838</td>\n",
+       "      <td>0.100282</td>\n",
+       "      <td>0.193523</td>\n",
+       "      <td>-0.312141</td>\n",
+       "      <td>-0.973336</td>\n",
+       "      <td>0.358665</td>\n",
+       "      <td>0.475102</td>\n",
+       "      <td>-0.436816</td>\n",
+       "      <td>-0.336667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.409125</td>\n",
+       "      <td>-0.478657</td>\n",
+       "      <td>-0.117278</td>\n",
+       "      <td>0.415768</td>\n",
+       "      <td>0.559727</td>\n",
+       "      <td>0.687541</td>\n",
+       "      <td>1.121091</td>\n",
+       "      <td>0.525855</td>\n",
+       "      <td>0.011480</td>\n",
+       "      <td>-0.787342</td>\n",
+       "      <td>-0.499203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.409125</td>\n",
+       "      <td>-0.478657</td>\n",
+       "      <td>-0.117278</td>\n",
+       "      <td>0.415768</td>\n",
+       "      <td>0.559727</td>\n",
+       "      <td>0.687541</td>\n",
+       "      <td>1.121091</td>\n",
+       "      <td>0.525855</td>\n",
+       "      <td>0.011480</td>\n",
+       "      <td>-0.787342</td>\n",
+       "      <td>-0.499203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4893</th>\n",
+       "      <td>-0.776015</td>\n",
+       "      <td>-0.677101</td>\n",
+       "      <td>-0.365197</td>\n",
+       "      <td>-0.944765</td>\n",
+       "      <td>-0.310008</td>\n",
+       "      <td>-0.664970</td>\n",
+       "      <td>-1.091000</td>\n",
+       "      <td>-0.965483</td>\n",
+       "      <td>0.541334</td>\n",
+       "      <td>0.088973</td>\n",
+       "      <td>0.557282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4894</th>\n",
+       "      <td>-0.301959</td>\n",
+       "      <td>0.414339</td>\n",
+       "      <td>0.213280</td>\n",
+       "      <td>0.317179</td>\n",
+       "      <td>0.056196</td>\n",
+       "      <td>1.275590</td>\n",
+       "      <td>0.697499</td>\n",
+       "      <td>0.291789</td>\n",
+       "      <td>-0.253446</td>\n",
+       "      <td>-0.261553</td>\n",
+       "      <td>-0.743008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4895</th>\n",
+       "      <td>-0.420473</td>\n",
+       "      <td>-0.379435</td>\n",
+       "      <td>-1.191592</td>\n",
+       "      <td>-1.023637</td>\n",
+       "      <td>-0.218457</td>\n",
+       "      <td>-0.312141</td>\n",
+       "      <td>-0.643875</td>\n",
+       "      <td>-0.497350</td>\n",
+       "      <td>-1.313153</td>\n",
+       "      <td>-0.261553</td>\n",
+       "      <td>-0.905544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4896</th>\n",
+       "      <td>-1.605613</td>\n",
+       "      <td>0.116674</td>\n",
+       "      <td>-0.282557</td>\n",
+       "      <td>-1.043355</td>\n",
+       "      <td>-1.088192</td>\n",
+       "      <td>-0.900190</td>\n",
+       "      <td>-0.667408</td>\n",
+       "      <td>-1.784717</td>\n",
+       "      <td>1.004955</td>\n",
+       "      <td>-0.962605</td>\n",
+       "      <td>1.857572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4897</th>\n",
+       "      <td>-1.013043</td>\n",
+       "      <td>-0.677101</td>\n",
+       "      <td>0.378559</td>\n",
+       "      <td>-1.102508</td>\n",
+       "      <td>-1.179743</td>\n",
+       "      <td>-0.782580</td>\n",
+       "      <td>-0.949803</td>\n",
+       "      <td>-1.543962</td>\n",
+       "      <td>0.475102</td>\n",
+       "      <td>-1.488394</td>\n",
+       "      <td>1.044891</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4898 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2         3         4         5         6   \\\n",
+       "0     0.172097 -0.081770  0.213280  2.821349 -0.035355  0.569932  0.744565   \n",
+       "1    -0.657501  0.215896  0.048001 -0.944765  0.147747 -1.253019 -0.149685   \n",
+       "2     1.475751  0.017452  0.543838  0.100282  0.193523 -0.312141 -0.973336   \n",
+       "3     0.409125 -0.478657 -0.117278  0.415768  0.559727  0.687541  1.121091   \n",
+       "4     0.409125 -0.478657 -0.117278  0.415768  0.559727  0.687541  1.121091   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "4893 -0.776015 -0.677101 -0.365197 -0.944765 -0.310008 -0.664970 -1.091000   \n",
+       "4894 -0.301959  0.414339  0.213280  0.317179  0.056196  1.275590  0.697499   \n",
+       "4895 -0.420473 -0.379435 -1.191592 -1.023637 -0.218457 -0.312141 -0.643875   \n",
+       "4896 -1.605613  0.116674 -0.282557 -1.043355 -1.088192 -0.900190 -0.667408   \n",
+       "4897 -1.013043 -0.677101  0.378559 -1.102508 -1.179743 -0.782580 -0.949803   \n",
+       "\n",
+       "            7         8         9         10  \n",
+       "0     2.331512 -1.246921 -0.349184 -1.393152  \n",
+       "1    -0.009154  0.740029  0.001342 -0.824276  \n",
+       "2     0.358665  0.475102 -0.436816 -0.336667  \n",
+       "3     0.525855  0.011480 -0.787342 -0.499203  \n",
+       "4     0.525855  0.011480 -0.787342 -0.499203  \n",
+       "...        ...       ...       ...       ...  \n",
+       "4893 -0.965483  0.541334  0.088973  0.557282  \n",
+       "4894  0.291789 -0.253446 -0.261553 -0.743008  \n",
+       "4895 -0.497350 -1.313153 -0.261553 -0.905544  \n",
+       "4896 -1.784717  1.004955 -0.962605  1.857572  \n",
+       "4897 -1.543962  0.475102 -1.488394  1.044891  \n",
+       "\n",
+       "[4898 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_wine_white_features = data_white_wine.copy()\n",
+    "data_wine_white_features.drop(\"quality\", axis=1, inplace=True)\n",
+    "data_white_wine_scaled = StandardScaler().fit_transform(data_wine_white_features)\n",
+    "data_white_wine_scaled = pd.DataFrame(data_white_wine_scaled)\n",
+    "data_white_wine_scaled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### PCA\n",
+    "On extrait les composantes principales de notre dataset nous permettant d'avoir au moins 80% de l'information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Composante principale 1</th>\n",
+       "      <th>Composante principale 2</th>\n",
+       "      <th>Composante principale 3</th>\n",
+       "      <th>Composante principale 4</th>\n",
+       "      <th>Composante principale 5</th>\n",
+       "      <th>Composante principale 6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.676944</td>\n",
+       "      <td>-0.545233</td>\n",
+       "      <td>-0.930422</td>\n",
+       "      <td>-1.135374</td>\n",
+       "      <td>-0.292855</td>\n",
+       "      <td>-0.891620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.644588</td>\n",
+       "      <td>0.430770</td>\n",
+       "      <td>-0.356331</td>\n",
+       "      <td>0.999117</td>\n",
+       "      <td>-0.714078</td>\n",
+       "      <td>-0.483738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.155291</td>\n",
+       "      <td>-1.189800</td>\n",
+       "      <td>-0.017532</td>\n",
+       "      <td>0.270219</td>\n",
+       "      <td>-0.367706</td>\n",
+       "      <td>-0.500682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.455374</td>\n",
+       "      <td>0.099680</td>\n",
+       "      <td>-0.001956</td>\n",
+       "      <td>-0.423022</td>\n",
+       "      <td>-0.469981</td>\n",
+       "      <td>0.769261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.455374</td>\n",
+       "      <td>0.099680</td>\n",
+       "      <td>-0.001956</td>\n",
+       "      <td>-0.423022</td>\n",
+       "      <td>-0.469981</td>\n",
+       "      <td>0.769261</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Composante principale 1  Composante principale 2  Composante principale 3  \\\n",
+       "0                 3.676944                -0.545233                -0.930422   \n",
+       "1                -0.644588                 0.430770                -0.356331   \n",
+       "2                 0.155291                -1.189800                -0.017532   \n",
+       "3                 1.455374                 0.099680                -0.001956   \n",
+       "4                 1.455374                 0.099680                -0.001956   \n",
+       "\n",
+       "   Composante principale 4  Composante principale 5  Composante principale 6  \n",
+       "0                -1.135374                -0.292855                -0.891620  \n",
+       "1                 0.999117                -0.714078                -0.483738  \n",
+       "2                 0.270219                -0.367706                -0.500682  \n",
+       "3                -0.423022                -0.469981                 0.769261  \n",
+       "4                -0.423022                -0.469981                 0.769261  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca6 = PCA(n_components=6)\n",
+    "pca_white_wine = pca6.fit_transform(data_white_wine_scaled)\n",
+    "pca_white_wine_df = pd.DataFrame(data = pca_white_wine\n",
+    "             , columns = ['Composante principale 1', 'Composante principale 2', 'Composante principale 3', 'Composante principale 4', 'Composante principale 5', 'Composante principale 6'])\n",
+    "pca_white_wine_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On analyse maintenant l'information qu'a pris ces deux composantes principales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance exprimée par composante principale : [0.29293217 0.14320363 0.11106103 0.09259294 0.08848496 0.08534014]\n",
+      "Indiquant alors qu'on a au total : 81.36148733941035 % exprimée à travers ces 6 composantes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Variance exprimée par composante principale : {}'.format(pca6.explained_variance_ratio_))\n",
+    "print(\"Indiquant alors qu'on a au total : {}\".format(sum(pca6.explained_variance_ratio_)*100),\"% exprimée à travers ces 6 composantes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On est donc passé de 11 variables à 6 composantes exprimant ainsi à hauteur de 81.36% de la variance globale du problème"
    ]
   }
  ],
