Application de la première méthode de classification utilisant un KNN

--- a/wine-notebook.ipynb
+++ b/wine-notebook.ipynb
@@ -1385,7 +1385,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On est donc passé de 11 variables à 6 composantes exprimant ainsi à hauteur de 81.36% de la variance globale du problème"
+    "On est donc passé de 11 variables à 6 composantes exprimant ainsi à hauteur de 81.36% de la variance globale du problème\n",
+    "#### d) Classification\n",
+    "On va alors faire un comparatif de performances pour la classification de ces classes, en utilisant les données d'origine et ensuite en utilisant les 6 composantes principales qu'on a eu. Je vais alors appliquer les modèles suivants : \n",
+    "- KNN\n",
+    "- SVM \n",
+    "- Stochastic Gradient Descent\n",
+    "- Gaussian Processes\n",
+    "- Gaussian Naive Bayes\n",
+    "\n",
+    "Et eventuellement \n",
+    "- Ensemble method alliant les algorithmes donnant les meilleurs résultats\n",
+    "\n",
+    "##### Subdivision du dataset en test et entrainement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etiq = data_white_wine[\"quality\"]\n",
+    "fv_train, fv_test, etiq_train, etiq_test = train_test_split(data_wine_white_features, etiq, test_size=0.3,random_state=23)\n",
+    "fv_train_pca, fv_test_pca, etiq_train, etiq_test = train_test_split(pca_white_wine_df, etiq, test_size=0.3,random_state=23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### KNN \n",
+    "En utilisant Grid Search pour le choix des paramètres optimisant le résultat de classification\n",
+    "##### Variables de base\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=1, p=1)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameters = {'n_neighbors':np.arange(1,20,1), 'p' : np.arange(1,3,1)}\n",
+    "knn=KNeighborsClassifier()\n",
+    "clf = GridSearchCV(knn, parameters)\n",
+    "clf.fit(fv_train,etiq_train)\n",
+    "knn=KNeighborsClassifier(**clf.best_params_)\n",
+    "knn.fit(fv_train,etiq_train)"
    ]
   }
  ],
