Rédaction et actualisation du contenu du README

--- a/wine-notebook.ipynb
+++ b/wine-notebook.ipynb
@@ -1429,6 +1429,7 @@
     "- Stochastic Gradient Descent\n",
     "- Gaussian Processes\n",
     "- Gaussian Naive Bayes\n",
+    "- Random Forrest\n",
     "- MLP\n",
     "\n",
     "Et eventuellement \n",
